--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -6,20 +6,44 @@
     <title>Task manager</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
-    crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+      crossorigin="anonymous"
     />
     <style>
       body {
         /* background: linear-gradient(135deg, #e3f2fd 0%, #bbdefb 100%); */
         min-height: 100vh;
-        overflow-x: hidden; 
+        overflow-x: hidden;
       }
+      .gradient-header {
+        background-image: linear-gradient(90deg, #2c3e50, #3498db);
+      }
+
+      .glass-nav {
+        backdrop-filter: blur(16px);
+        background: rgba(255, 255, 255, 0.1);
+        border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+      }
+
+      .logo-container {
+        background: rgba(255, 255, 255, 0.15);
+        backdrop-filter: blur(10px);
+      }
+
+      .btn-glow:hover {
+        transform: translateY(-1px);
+        box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
+      }
+
+      .title-shadow {
+        text-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+      }
+
       .todo-card {
         /* background-image: linear-gradient(to right, #dbdcd7 0%, #dddcd7 24%, #e2c9cc 30%, #e7627d 46%, #b8235a 59%, #801357 71%, #3d1635 84%, #1c1a27 100%); */
-        background: linear-gradient(to top, #3e5151, #decba4);
+        background-image: linear-gradient(150deg, #eef2f3, #8e9eab);
         border-radius: 12px;
         box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
         padding: 24px;
@@ -118,7 +142,7 @@
       }
 
       .btn-delete {
-        background: #f56565;
+        background: #ce5c5c;
         color: white;
       }
 
@@ -128,24 +152,24 @@
       }
 
       .btn-save {
-            background: #48bb78;
-            color: white;
-        }
+        background: #48bb78;
+        color: white;
+      }
 
-        .btn-save:hover {
-            background: #38a169;
-            transform: translateY(-1px);
-        }
+      .btn-save:hover {
+        background: #32c778;
+        transform: translateY(-1px);
+      }
 
-        .btn-cancel {
-            background: #d02f13;
-            color: white;
-        }
+      .btn-cancel {
+        background: #d34c34;
+        color: white;
+      }
 
-        .btn-cancel:hover {
-            background: #d02f13;
-            transform: translateY(-1px);
-        }
+      .btn-cancel:hover {
+        background: #d02f13;
+        transform: translateY(-1px);
+      }
 
       .canvaBtn:active {
         transform: translateY(0);
@@ -164,7 +188,6 @@
     </style>
   </head>
   <body>
-    
     <div id="root">root element</div>
     <script src="../src/index.js"></script>
   </body>
